<resources>
    <string name="app_name">BaoStore</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="debug_SplashActivity">---SplashActivity</string>
    <string name="debug_LoginActivity">---LoginActivity</string>
    <string name="debug_RegisterActivity">---RegisterActivity</string>
    <string name="debug_MainActivity">---MainActivity</string>
    <string name="debug_CartAdapter">---CartAdapter</string>
    <string name="debug_UserInforActivity">---UserInforActivity</string>
    <string name="debug_activity_detail_item">--DetailItemActivity</string>
    <string name="debug_frag_home">--HomeFrag</string>
    <string name="debug_frag_search">--SearchFrag</string>
    <string name="debug_frag_cart">--HomeFrag</string>
    <string name="debug_callback">--HomeFrag</string>
    <string name="debug_adapter_book">--BookAdapter</string>
    <string name="debug_adapter_order_history">--OrderHistoryAdapter</string>
    <string name="enqueue_failure">Something wrong happen</string>
    <string name="text_out_of_stock">Sản phẩm hết hàng</string>
    <string name="err_email_empty">Cần phải nhập email</string>
    <string name="err_num_format">Phải là số</string>
    <string name="err_email_format">Không đúng dịnh dạng email</string>
    <string name="err_pass_empty">Cần phải nhập mật khẩu</string>
    <string name="err_phonenumber_empty">Cần phải nhập sđt</string>
    <string name="err_phonenumber_format">SĐT gồm 10 số</string>
    <string name="err_fullname_empty">Cần phải nhập tên</string>
    <string name="err_password_length">Mật khẩu phải > 6 ký tự</string>
    <string name="err_not_identical">Mật khẩu không trùng khớp</string>
    <string name="err_fail_login">Sai tên đăng nhập hoặc mật khẩu</string>
    <string name="text_payment_when_arrived">Thanh toán khi nhận hàng</string>
    <string name="text_payment_google_pay">Thanh toán Google Pay</string>
    <string name="hint_email">Email</string>
    <string name="hint_fullname">Họ tên</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="hint_re_password">Nhập lại mật khẩu</string>
    <string name="hint_password_old">Nhập mật khẩu cũ</string>
    <string name="hint_password_new">Nhập mật khẩu mới</string>
    <string name="hint_re_password_new">Nhập lại mật khẩu mới</string>
    <string name="hint_phonenumber">Số Điện Thoại</string>
    <string name="hint_verification_code">Mã xác nhận</string>
    <string name="hint_search_for">Bạn muốn tìm gì ?</string>
    <string name="header_register">Đăng ký</string>
    <string name="header_login">Đăng Nhập</string>
    <string name="header_cart_payment">Thanh toán hóa đơn</string>
    <string name="header_buy_history">Lịch sử mua hàng</string>
    <string name="header_cart_info">Thông tin nhận hàng</string>
    <string name="header_change_pass">Thay đổi mật khẩu</string>
    <string name="header_user_info">Thông tin cá nhân</string>
    <string name="msg_exit_app">Nhấn lại để thoát app</string>
    <string name="err_account_deactivate">Tài khoản đã bị vô hiệu hóa</string>
    <string name="err_email_not_found">Email không tồn tại</string>
    <string name="err_file_not_found">Không tìm thấy file</string>
    <string name="splash_motto">Một thế giới sách đang chào đón bạn.</string>
    <string name="splash_header">Welcome to BaoStore</string>
    <string name="button_submit_login">Đăng nhập</string>
    <string name="button_to_forgot_pass">Quên mật khẩu</string>
    <string name="to_register_text">Bạn chưa có tài khoản ???</string>
    <string name="button_register">Đăng kí</string>
    <string name="button_cancel">Hủy</string>
    <string name="button_confirm">Xác nhận</string>
    <string name="bot_nav_home">Trang chủ</string>
    <string name="bot_nav_search">Tìm kiếm</string>
    <string name="bot_nav_cart">Giỏ hàng</string>
    <string name="bot_nav_user">Tôi</string>
    <string name="subtitle_popular">Sản phẩm nổi bật</string>
    <string name="subtitle_new">Sản phẩm mới</string>
    <string name="nav_to_search">Xem tất cả >></string>
    <string name="dropdown_search_advance">Lựa chọn nâng cao</string>
    <string name="search_option">Tìm kiếm theo: </string>
    <string name="sort_option">Sắp xếp theo: </string>
    <string name="no_item_match">Không tìm được sản phẩm</string>
    <string name="cart_total">Tổng</string>
    <string name="cart_temp_price">Giá</string>
    <string name="title_cart_info">Thông tin người nhận</string>
    <string name="title_cart_payment">Chi tiết thanh toán</string>
    <string name="nav_personal_info">Thông tin cá nhân</string>
    <string name="nav_order_history">Lịch sử mua hàng</string>
    <string name="nav_change_password">Thay đổi mật khẩu</string>
    <string name="nav_settings">Cài đặt</string>
    <string name="button_logout">Đăng xuất</string>
    <string name="text_fullname">Họ và tên</string>
    <string name="text_phonenumber">Số điện thoại</string>
    <string name="text_address">Địa chỉ</string>
    <string name="text_date">Ngày</string>
    <string name="text_note">Ghi chú</string>
    <string name="subtitle_total_cost">Tổng chi phí</string>
    <string name="text_shipping_price">Tiền ship</string>
    <string name="text_total_price">Tổng</string>
    <string name="text_payment_type">Phương thức thanh toán</string>
    <string name="text_voucher">Nhập mã voucher</string>
    <string name="button_add_cart">Thêm vào giỏ hàng</string>
    <string name="button_add_and_to_cart">Thanh toán</string>
    <string name="order_total">Thành tiền</string>
    <string name="text_language">Ngôn ngữ</string>
    <string name="text_setting">Cài đặt</string>
    <string name="text_cart_empty">Giỏ hàng trống</string>
    <string name="text_something_wrong">Tác vụ thất bại, vui lòng thử lại sau</string>
    <string name="image_not_picked">Bạn chưa chọn hình</string>
    <string name="text_register_success">Đăng ký thành công</string>
    <string name="text_register_fail">Đăng ký thất bại</string>
    <string name="text_preview_book">Xem trước</string>
    <string name="subtitle_receiver">Thông tin nhận hàng</string>
    <string name="snackbar_dismiss">Đã hiểu</string>
    <string name="backpressed_exit">Nhấn lại để thoát</string>
    <string name="text_spinner_new_address">Thêm địa chỉ mới</string>
    <string-array name="language">
        <item>Tiếng Việt</item>
        <item>Tiếng Anh</item>
        <item>Tiếng Pháp</item>
    </string-array>
    <string-array name="search_item">
        <item>Tiêu đề</item>
        <item>Danh mục</item>
        <item>Tác giả</item>
        <item>Nhà xuất bản</item>
    </string-array>
    <string-array name="sort_item">
        <item>Chữ cái tăng dần</item>
        <item>Chữ cái giảm dần</item>
        <item>Giá tăng dần</item>
        <item>Giá giảm dần</item>

    </string-array>
    <string-array name="district">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>Bình Tân</item>
        <item>Bình Thạnh</item>
        <item>Gò Vấp</item>
        <item>Phú Nhuận</item>
        <item>Tân Bình</item>
        <item>Tân Phú</item>
        <item>Bình Chánh</item>
        <item>Cát Giờ</item>
        <item>Củ Chi</item>
        <item>Hóc Môn</item>
        <item>Nhà Bè</item>
    </string-array>
    <string-array name="ward_1">
        <item>Bến Nghé</item>
        <item>Bến Thành</item>
        <item>Cầu Kho</item>
        <item>Cầu Ông Lãnh</item>
        <item>Cô Giang</item>
        <item>Đa Kao</item>
        <item>Nguyễn Cư Trinh</item>
        <item>Nguyễn Cư Trinh</item>
        <item>Phạm Ngũ Lão</item>
        <item>Tân Định</item>
    </string-array>
    <string-array name="ward_2">
        <item>An Khánh</item>
        <item>An Lợi Đông</item>
        <item>An Phú</item>
        <item>Bình An</item>
        <item>Bình Khánh</item>
        <item>Bình Trưng Đông</item>
        <item>Bình Trưng Tây</item>
        <item>Cát Lái</item>
        <item>Thạnh Mỹ Lợi</item>
        <item>Thảo Điền</item>
        <item>Thủ Thiêm</item>
    </string-array>
    <string-array name="ward_3">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>Võ Thị Sáu</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
    </string-array>
    <string-array name="ward_4">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>6</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>18</item>
    </string-array>
    <string-array name="ward_5">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
    </string-array>
    <string-array name="ward_7">
        <item>Phường Bình Thuận</item>
        <item>Phường Phú Mỹ</item>
        <item>Phường Phú Thuận</item>
        <item>Phường Tân Hưng</item>
        <item>Phường Tân Kiểng</item>
        <item>Phường Tân Phong</item>
        <item>Phường Tân Phú</item>
        <item>Phường Tân Quy</item>
        <item>Phường Tân Thuận Đông</item>
        <item>Phường Tân Thuận Tây</item>
    </string-array>
    <string-array name="ward_8">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
    </string-array>
    <string-array name="ward_9">
        <item>Hiệp Phú</item>
        <item>Long Bình</item>
        <item>Long Phước</item>
        <item>Long Thạnh Mỹ</item>
        <item>Long Trường, Phú Hữu</item>
        <item>Phước Bình</item>
        <item>Phước Long A</item>
        <item>Phước Long B</item>
        <item>Tân Phú</item>
        <item>Tăng Nhơn Phú A</item>
        <item>Tăng Nhơn Phú B</item>
        <item>Trường Thạnh</item>
    </string-array>
    <string-array name="ward_10">
        <item>1</item>
        <item>2</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>
    <string-array name="ward_12">
        <item>Phường An Phú Đông</item>
        <item> Phường Đông Hưng Thuận</item>
        <item>Phường Hiệp Thành</item>
        <item>Phường Tân Chánh Hiệp</item>
        <item> Phường Tân Hưng Thuận</item>
        <item> Phường Tân Thới Hiệp</item>
        <item> Phường Tân Thới Nhất</item>
        <item> Phường Thạnh Lộc</item>
        <item> Phường Thạnh Xuân</item>
        <item>  Phường Thới An</item>
        <item> Phường Trung Mỹ Tây</item>
    </string-array>
</resources>