<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ForgotPasswordActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_card"
        android:elevation="8dp"
        android:orientation="vertical"
        android:padding="15dp">

        <EditText
            android:id="@+id/ednewPass_forgotPass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_form_2"
            android:inputType="textPassword"
            android:maxLines="1"
            android:hint="@string/hint_password_new"
            android:paddingLeft="8dp"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/edReNewPass_forgotPass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_form_2"
            android:inputType="textPassword"
            android:maxLines="1"
            android:hint="@string/hint_re_password_new"
            android:paddingLeft="8dp"
            android:textSize="20dp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:gravity="center">

        <androidx.constraintlayout.utils.widget.MotionButton
            android:id="@+id/btnChangePass_forgotPass"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_1"
            android:text="@string/button_confirm"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

</RelativeLayout>