<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
   >
  <LinearLayout
      android:layout_width="match_parent"
      android:id="@+id/layoutHeader"
      android:layout_height="wrap_content">
      <include  android:id="@+id/myToolbar"
          layout="@layout/layout_toolbar"/>
  </LinearLayout>

 <LinearLayout
     android:id="@+id/layoutProgress"
     android:layout_below="@id/layoutHeader"
     android:layout_width="match_parent"
     android:layout_margin="10dp"
     android:layout_height="wrap_content">
     <include
         android:id="@+id/myProgress"
         layout="@layout/layout_cart_progress" />
 </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@id/layoutProgress"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:text="@string/title_cart_info"
                android:textColor="@color/black"
                android:textSize="24dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edFullName_cartinfo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_form_2"
                android:drawableStart="@drawable/ic_person_3"
                android:drawablePadding="10dp"
                android:hint="@string/hint_fullname"
                android:paddingLeft="8dp"
                android:text="Nguyen Van A"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/edPhoneNumber_cartinfo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_form_2"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="10dp"
                android:hint="@string/hint_phonenumber"
                android:paddingLeft="8dp"
                android:text="0123456789"
                android:textSize="20dp" />


           <LinearLayout
               android:layout_width="match_parent"
               android:background="@drawable/custom_form_2"
               android:layout_marginBottom="20dp"

               android:layout_height="wrap_content">

               <ImageView
                   android:layout_width="24dp"
                   android:layout_height="24dp"
                   android:layout_gravity="center"
                   android:layout_marginLeft="10dp"
                   android:src="@drawable/ic_address" />
               <Spinner
                   android:id="@+id/spnAddresses_cartinfo"
                   android:layout_width="match_parent"
                   android:layout_height="50dp"
                   android:layout_marginLeft="10dp"



                  />
           </LinearLayout>

            <EditText
                android:id="@+id/edEmail_cartinfo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_form_2"
                android:drawableStart="@drawable/ic_mail_2"
                android:drawablePadding="10dp"
                android:hint="@string/hint_email"
                android:paddingLeft="8dp"
                android:text="Mail"
                android:textSize="20dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/layoutBotButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:gravity="center"
        android:padding="10dp">

        <androidx.constraintlayout.utils.widget.MotionButton
            android:id="@+id/btnConfirmCartInfor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/custom_button_blue"
            android:text="@string/button_confirm"
            android:textAllCaps="false"
            android:textColor="#001AFF"
            android:textSize="20dp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />
    </LinearLayout>


</RelativeLayout>