<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/image_1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:orientation="vertical">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="100dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/custom_form_background_login"
            android:orientation="vertical"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               android:layout_margin="10dp"
                android:text="@string/header_register"
                android:textAlignment="center"
                android:textColor="#3D5ED6"
                android:textSize="32dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/custom_form_1"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5dp">




                <EditText
                    android:id="@+id/edFullName_reg"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:drawableStart="@drawable/ic_user_1"
                    android:drawablePadding="12dp"
                    android:background="#fff"
                    android:hint="@string/hint_fullname"
                    android:lineSpacingMultiplier="1"
                    android:lines="1"
                    android:maxLines="1"
                    android:inputType="text"
                    android:paddingLeft="10dp"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/custom_form_1"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5dp">

                <EditText
                    android:id="@+id/edPassword_reg"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:background="#fff"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="12dp"
                    android:hint="@string/hint_password"
                    android:lineSpacingMultiplier="1"
                    android:lines="1"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/custom_form_1"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5dp">


                <EditText
                    android:id="@+id/edRePassword_reg"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:background="#fff"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="12dp"
                    android:hint="@string/hint_re_password"
                    android:lineSpacingMultiplier="1"
                    android:lines="1"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:textSize="20dp" />
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/custom_form_1"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5dp">

                <EditText
                    android:id="@+id/edPhoneNumber_reg"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:background="#fff"
                    android:drawableStart="@drawable/call"
                    android:drawablePadding="12dp"
                    android:hint="@string/hint_phonenumber"
                    android:lineSpacingMultiplier="1"
                    android:lines="1"
                    android:maxLines="1"
                    android:inputType="numberSigned"
                    android:paddingLeft="10dp"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.constraintlayout.utils.widget.MotionButton
                    android:id="@+id/btnCancel"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/custom_button_1"
                    android:text="@string/button_cancel"
                    android:textAllCaps="false"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="295dp"
                    tools:layout_editor_absoluteY="41dp" />

                <androidx.constraintlayout.utils.widget.MotionButton
                    android:id="@+id/btnRegister"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/custom_button_1"
                    android:text="@string/button_register"
                    android:textAllCaps="false"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="295dp"
                    tools:layout_editor_absoluteY="41dp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>